refactor: use .toList rather than .collector(Collectos.toList())